Bug 146346 - FILEOPEN: DOCX: paragraphs between the body and the footnote are gone
Summary: FILEOPEN: DOCX: paragraphs between the body and the footnote are gone
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-12-21 10:26 UTC by Xisco Faulí
Modified: 2022-05-27 10:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Comparison MSO 2010 and LibreOffice 7.3 (537.42 KB, image/png)
2021-12-21 10:26 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-12-21 10:26:55 UTC
Created attachment 177050 [details]
Comparison MSO 2010 and LibreOffice 7.3

Steps to reproduce:
1. Open attachment 81862 [details] from bug 66496

-> The space between the document's body and the footnotes is gone. See comparison

Reproduced in

Version: 7.3.0.0.beta1+ / LibreOffice Community
Build ID: 86f539a23b08d0cc9e5e9566ac31380e373be13f
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2021-12-21 10:27:19 UTC
[Bug found by office-interoperability-tools]
Comment 2 Xisco Faulí 2021-12-21 10:28:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c46950fee11f5207fb8324947280cd565ae483e7

author	László Németh <nemeth@numbertext.org>	2021-08-10 13:05:48 +0200
committer	László Németh <nemeth@numbertext.org>	2021-08-11 13:58:26 +0200
commit c46950fee11f5207fb8324947280cd565ae483e7 (patch)
tree 7b0d819f4f917e2e3a2ede2fd322b8c995a7039c
parent d39d87bbffe8e731bad92f2fe90526c3610689f5 (diff)
tdf#143583 DOCX import: fix lost empty paragraphs of footnotes

Bisected with: bibisect-linux64-7.3

Adding Cc: to László Németh
Comment 3 Xisco Faulí 2022-05-02 14:50:05 UTC
Dear László Németh ,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Resetting it to NEW.
Please assign it back to yourself if you're still working on this.
Comment 4 Commit Notification 2022-05-04 10:23:17 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d1ac8df139a2a65db45d1970ccc0b80e17d827f6

tdf#146346 DOCX import: fix table margins in footnotes

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2022-05-04 10:23:33 UTC
Commit description:

tdf#146346 DOCX import: fix table margins in footnotes

Paragraph of the anchoring point of the floating table
needs zero top and bottom margins, if the table was a
not floating table in the footnote originally, otherwise
docDefault (Standard) margins could result bigger vertical
spaces around the table.

Quasi regression from commit c46950fee11f5207fb8324947280cd565ae483e7
"tdf#143583 DOCX import: fix lost empty paragraphs of footnotes"
(before this commit, empty paragraphs at the end of the footnotes
were removed by accident, which hid the real problem fixed now).

See also commit e11c51eefe8c3210cef2b5850f401ba67a401d01
"tdf#95806 tdf#125877 tdf#141172 DOCX: fix tables in footnotes"
(Note: before this commit, only a single table was shown instead
of the eight tables of the eight footnotes.)
Comment 6 Commit Notification 2022-05-04 14:05:49 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/e3cca5bb02c52f92b8fc7b4b87ca2fc2b9615ead

tdf#146346 DOCX import: fix table margins in footnotes

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2022-05-27 10:40:48 UTC
Verified in:

Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: b6266207b55a7633dc82b02142215757512adfb7
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL